syntax = "proto3";
package Proto.Lego.Aggregate;
option csharp_namespace = "Proto.Lego.Aggregate";

import "google/protobuf/any.proto";

message Operation {
	string caller = 1;
	int64 sequence = 2;
	google.protobuf.Any action = 3;
}

message OperationResponse {
	bool success = 1;
	string error_message = 2;
}

message WipeCallerState {
	string caller = 1;
}

//State

message AggregateStateWrapper {
	map<string,CallerCommunicationState> caller_states = 1;
	google.protobuf.Any inner_state = 2;
}

message CallerCommunicationState {
	int64 sequence = 1;
	map<int64,OperationResponse> responses = 2;
	repeated google.protobuf.Any prepared_actions = 3;
}